# haskell

./: LICENSE  README.md  haskell.cabal
2/: q4_q5.hs
app/: Main.hs
