cabal-version:      3.0
name:               haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskellweb
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.15.1.0,
                   blaze-html,
                   blaze-markup,
                   text,
                   scotty == 0.12

    hs-source-dirs:   app
    default-language: Haskell2010
